# floresta-ffi

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust-ci.yaml  test-android.yaml
floresta-android/: README.md  build.gradle.kts  settings.gradle.kts
floresta-android/lib/: build.gradle.kts  proguard-rules.pro
floresta-android/scripts/dev/: build-dev-linux-x86_64.sh
floresta-android/scripts/release/: build-release-linux-x86_64.sh
floresta-ffi/: Cargo.toml  justfile  uniffi.toml
floresta-ffi/src/: floresta.udl  lib.rs
src/: floresta.udl  lib.rs
