[package]
name = "floresta-ffi"
version = "0.1.0"
edition = "2021"

[dependencies]
uniffi = { version = "0.27.3", features = ["build", "cli"] }
floresta-node = { git = "https://github.com/getfloresta/Floresta", rev = "189ad1d46ae724abc5a7a6434d1f176750601ac2", features = ["json-rpc", "compact-filters"] }
bitcoin = "0.32.8"
rustreexo = "0.5.0"
tokio = "1.52.3"

[build-dependencies]
uniffi = { version = "0.27.3", features = ["build", "cli"] }

[[bin]]
name = "uniffi-bindgen"
path = "src/uniffi-bindgen.rs"

[lib]
crate-type = ["cdylib"]
name = "florestad_ffi"

[dev-dependencies]
uniffi = { version = "0.27.3", features = ["build", "cli"] }

[features]
zmq-server = ["floresta-node/zmq-server"]

